--- a/ui_creator/form.ui
+++ b/ui_creator/form.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1080</width>
+    <height>645</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,7 +18,7 @@
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="page_home">
        <widget class="QPushButton" name="btn_collect_face">
@@ -34,19 +34,94 @@
          <string>录入人脸</string>
         </property>
        </widget>
-      </widget>
-      <widget class="QWidget" name="page_face_collect">
-       <widget class="QLabel" name="label">
+       <widget class="QPushButton" name="btn_face_detect">
         <property name="geometry">
          <rect>
-          <x>120</x>
-          <y>70</y>
+          <x>290</x>
+          <y>210</y>
+          <width>93</width>
+          <height>28</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>签到</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="page_face_detect">
+       <widget class="QLabel" name="label_2">
+        <property name="geometry">
+         <rect>
+          <x>320</x>
+          <y>200</y>
           <width>69</width>
           <height>19</height>
          </rect>
         </property>
         <property name="text">
-         <string>TextLabel</string>
+         <string>face detection</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="page_info_display">
+       <widget class="QLabel" name="label_3">
+        <property name="geometry">
+         <rect>
+          <x>300</x>
+          <y>230</y>
+          <width>69</width>
+          <height>19</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>dispaly</string>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="page_face_collect">
+       <widget class="QLabel" name="label_disp_video">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>10</y>
+          <width>1001</width>
+          <height>511</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">border: 5px solid red;</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="btn_start">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>530</y>
+          <width>93</width>
+          <height>28</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>开始录入</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="btn_end">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>530</y>
+          <width>93</width>
+          <height>28</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>停止录入</string>
         </property>
        </widget>
       </widget>
@@ -59,7 +134,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1080</width>
      <height>25</height>
     </rect>
    </property>
