--- a/ui_creator/form.ui
+++ b/ui_creator/form.ui
@@ -17,6 +17,9 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
+      <property name="styleSheet">
+       <string notr="true"/>
+      </property>
       <property name="currentIndex">
        <number>3</number>
       </property>
@@ -84,8 +87,8 @@
          <rect>
           <x>10</x>
           <y>10</y>
-          <width>1001</width>
-          <height>511</height>
+          <width>691</width>
+          <height>461</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -122,6 +125,48 @@
         </property>
         <property name="text">
          <string>停止录入</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_face">
+        <property name="geometry">
+         <rect>
+          <x>820</x>
+          <y>30</y>
+          <width>128</width>
+          <height>128</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">border: 5px solid red;</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="btn_confirm">
+        <property name="geometry">
+         <rect>
+          <x>800</x>
+          <y>170</y>
+          <width>93</width>
+          <height>28</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>确认录入</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="btn_pass">
+        <property name="geometry">
+         <rect>
+          <x>920</x>
+          <y>170</y>
+          <width>93</width>
+          <height>28</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>放弃</string>
         </property>
        </widget>
       </widget>
