--- a/ui_creator/form.ui
+++ b/ui_creator/form.ui
@@ -60,19 +60,6 @@
          </rect>
         </property>
        </widget>
-       <widget class="QPushButton" name="btn_confirm_table">
-        <property name="geometry">
-         <rect>
-          <x>340</x>
-          <y>450</y>
-          <width>93</width>
-          <height>28</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>确认</string>
-        </property>
-       </widget>
        <widget class="QLabel" name="label_6">
         <property name="geometry">
          <rect>
@@ -86,19 +73,58 @@
          <string>选择数据库</string>
         </property>
        </widget>
-      </widget>
-      <widget class="QWidget" name="page_face_detect">
-       <widget class="QLabel" name="label_2">
+       <widget class="QWidget" name="layoutWidget">
         <property name="geometry">
          <rect>
-          <x>320</x>
-          <y>200</y>
-          <width>69</width>
-          <height>19</height>
+          <x>330</x>
+          <y>450</y>
+          <width>295</width>
+          <height>30</height>
          </rect>
         </property>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QPushButton" name="btn_confirm_table">
+           <property name="text">
+            <string>选择</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_create_table">
+           <property name="text">
+            <string>创建</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_drop_table">
+           <property name="text">
+            <string>删除</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="page_face_detect">
+       <widget class="QLabel" name="label_disp_video_2">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>0</y>
+          <width>700</width>
+          <height>460</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">border: 5px solid red;</string>
+        </property>
         <property name="text">
-         <string>face detection</string>
+         <string/>
+        </property>
+        <property name="wordWrap">
+         <bool>false</bool>
         </property>
        </widget>
       </widget>
@@ -123,8 +149,8 @@
          <rect>
           <x>10</x>
           <y>10</y>
-          <width>691</width>
-          <height>461</height>
+          <width>700</width>
+          <height>460</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -168,110 +194,21 @@
          <rect>
           <x>820</x>
           <y>30</y>
-          <width>128</width>
-          <height>128</height>
+          <width>150</width>
+          <height>150</height>
          </rect>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
         <property name="styleSheet">
          <string notr="true">border: 5px solid red;</string>
         </property>
         <property name="text">
          <string/>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="btn_confirm">
-        <property name="geometry">
-         <rect>
-          <x>790</x>
-          <y>340</y>
-          <width>93</width>
-          <height>28</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>确认录入</string>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="btn_pass">
-        <property name="geometry">
-         <rect>
-          <x>930</x>
-          <y>340</y>
-          <width>93</width>
-          <height>28</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>放弃</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label">
-        <property name="geometry">
-         <rect>
-          <x>780</x>
-          <y>190</y>
-          <width>69</width>
-          <height>19</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>姓名</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="line_edit_name">
-        <property name="geometry">
-         <rect>
-          <x>850</x>
-          <y>190</y>
-          <width>113</width>
-          <height>25</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_4">
-        <property name="geometry">
-         <rect>
-          <x>790</x>
-          <y>230</y>
-          <width>69</width>
-          <height>19</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>性别</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="line_edit_gender">
-        <property name="geometry">
-         <rect>
-          <x>860</x>
-          <y>230</y>
-          <width>113</width>
-          <height>25</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_5">
-        <property name="geometry">
-         <rect>
-          <x>800</x>
-          <y>270</y>
-          <width>69</width>
-          <height>19</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>年龄</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="line_edit_age">
-        <property name="geometry">
-         <rect>
-          <x>870</x>
-          <y>270</y>
-          <width>113</width>
-          <height>25</height>
-         </rect>
         </property>
        </widget>
        <widget class="QTableView" name="table_view_show_stu">
@@ -283,6 +220,74 @@
           <height>171</height>
          </rect>
         </property>
+       </widget>
+       <widget class="QWidget" name="">
+        <property name="geometry">
+         <rect>
+          <x>780</x>
+          <y>190</y>
+          <width>213</width>
+          <height>91</height>
+         </rect>
+        </property>
+        <layout class="QGridLayout" name="gridLayout">
+         <item row="0" column="0">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>姓名</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1" colspan="2">
+          <widget class="QLineEdit" name="line_edit_name"/>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>性别</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1" colspan="2">
+          <widget class="QLineEdit" name="line_edit_gender"/>
+         </item>
+         <item row="2" column="0" colspan="2">
+          <widget class="QLabel" name="label_5">
+           <property name="text">
+            <string>年龄</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="2">
+          <widget class="QLineEdit" name="line_edit_age"/>
+         </item>
+        </layout>
+       </widget>
+       <widget class="QWidget" name="">
+        <property name="geometry">
+         <rect>
+          <x>790</x>
+          <y>340</y>
+          <width>195</width>
+          <height>30</height>
+         </rect>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <widget class="QPushButton" name="btn_confirm">
+           <property name="text">
+            <string>确认录入</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_pass">
+           <property name="text">
+            <string>放弃</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </widget>
      </widget>
