--- a/ui_creator/form.ui
+++ b/ui_creator/form.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1080</width>
-    <height>645</height>
+    <width>1169</width>
+    <height>669</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,7 +21,7 @@
        <string notr="true"/>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="page_home">
        <widget class="QPushButton" name="btn_collect_face">
@@ -37,7 +37,7 @@
          <string>录入人脸</string>
         </property>
        </widget>
-       <widget class="QPushButton" name="btn_face_detect">
+       <widget class="QPushButton" name="btn_jump_to_face_detect">
         <property name="geometry">
          <rect>
           <x>430</x>
@@ -127,6 +127,39 @@
          <bool>false</bool>
         </property>
        </widget>
+       <widget class="QPushButton" name="btn_confirm_face_detect">
+        <property name="geometry">
+         <rect>
+          <x>190</x>
+          <y>510</y>
+          <width>93</width>
+          <height>28</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>开始</string>
+        </property>
+       </widget>
+       <widget class="QListWidget" name="lst_show_absent">
+        <property name="geometry">
+         <rect>
+          <x>800</x>
+          <y>320</y>
+          <width>256</width>
+          <height>192</height>
+         </rect>
+        </property>
+       </widget>
+       <widget class="QTableWidget" name="tb_show_absent">
+        <property name="geometry">
+         <rect>
+          <x>800</x>
+          <y>60</y>
+          <width>256</width>
+          <height>192</height>
+         </rect>
+        </property>
+       </widget>
       </widget>
       <widget class="QWidget" name="page_info_display">
        <widget class="QLabel" name="label_3">
@@ -152,6 +185,12 @@
           <width>700</width>
           <height>460</height>
          </rect>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
         </property>
         <property name="styleSheet">
          <string notr="true">border: 5px solid red;</string>
@@ -192,7 +231,7 @@
        <widget class="QLabel" name="label_face">
         <property name="geometry">
          <rect>
-          <x>820</x>
+          <x>810</x>
           <y>30</y>
           <width>150</width>
           <height>150</height>
@@ -200,8 +239,8 @@
         </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
+          <horstretch>150</horstretch>
+          <verstretch>150</verstretch>
          </sizepolicy>
         </property>
         <property name="styleSheet">
@@ -220,8 +259,14 @@
           <height>171</height>
          </rect>
         </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>150</horstretch>
+          <verstretch>150</verstretch>
+         </sizepolicy>
+        </property>
        </widget>
-       <widget class="QWidget" name="">
+       <widget class="QWidget" name="layoutWidget">
         <property name="geometry">
          <rect>
           <x>780</x>
@@ -229,6 +274,12 @@
           <width>213</width>
           <height>91</height>
          </rect>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>150</horstretch>
+          <verstretch>150</verstretch>
+         </sizepolicy>
         </property>
         <layout class="QGridLayout" name="gridLayout">
          <item row="0" column="0">
@@ -263,7 +314,7 @@
          </item>
         </layout>
        </widget>
-       <widget class="QWidget" name="">
+       <widget class="QWidget" name="layoutWidget">
         <property name="geometry">
          <rect>
           <x>790</x>
@@ -271,6 +322,12 @@
           <width>195</width>
           <height>30</height>
          </rect>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>150</horstretch>
+          <verstretch>150</verstretch>
+         </sizepolicy>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
@@ -299,7 +356,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1080</width>
+     <width>1169</width>
      <height>25</height>
     </rect>
    </property>
