--- a/ui_creator/form.ui
+++ b/ui_creator/form.ui
@@ -6,29 +6,53 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1169</width>
-    <height>669</height>
+    <width>1561</width>
+    <height>884</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
+   <layout class="QHBoxLayout" name="horizontalLayout_3" stretch="1,5">
+    <item>
+     <widget class="QTreeWidget" name="tree_widget">
+      <column>
+       <property name="text">
+        <string>功能选项</string>
+       </property>
+      </column>
+      <item>
+       <property name="text">
+        <string>切换登陆</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>班级信息</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>开始签到</string>
+       </property>
+      </item>
+     </widget>
+    </item>
     <item>
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="styleSheet">
        <string notr="true"/>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="page_home">
        <widget class="QPushButton" name="btn_collect_face">
         <property name="geometry">
          <rect>
-          <x>430</x>
-          <y>110</y>
+          <x>340</x>
+          <y>490</y>
           <width>93</width>
           <height>28</height>
          </rect>
@@ -37,11 +61,11 @@
          <string>录入人脸</string>
         </property>
        </widget>
-       <widget class="QPushButton" name="btn_jump_to_face_detect">
+       <widget class="QPushButton" name="btn_detect_face">
         <property name="geometry">
          <rect>
-          <x>430</x>
-          <y>180</y>
+          <x>510</x>
+          <y>490</y>
           <width>93</width>
           <height>28</height>
          </rect>
@@ -70,7 +94,7 @@
          </rect>
         </property>
         <property name="text">
-         <string>选择数据库</string>
+         <string>选择班级</string>
         </property>
        </widget>
        <widget class="QWidget" name="layoutWidget">
@@ -111,9 +135,9 @@
        <widget class="QLabel" name="label_disp_video_2">
         <property name="geometry">
          <rect>
-          <x>20</x>
-          <y>0</y>
-          <width>700</width>
+          <x>10</x>
+          <y>10</y>
+          <width>621</width>
           <height>460</height>
          </rect>
         </property>
@@ -143,10 +167,10 @@
        <widget class="QTableView" name="table_view_show_absent">
         <property name="geometry">
          <rect>
-          <x>790</x>
-          <y>180</y>
-          <width>256</width>
-          <height>192</height>
+          <x>690</x>
+          <y>270</y>
+          <width>231</width>
+          <height>171</height>
          </rect>
         </property>
        </widget>
@@ -166,8 +190,8 @@
        <widget class="QLabel" name="label_2">
         <property name="geometry">
          <rect>
-          <x>800</x>
-          <y>150</y>
+          <x>710</x>
+          <y>180</y>
           <width>231</width>
           <height>16</height>
          </rect>
@@ -372,7 +396,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1169</width>
+     <width>1561</width>
      <height>21</height>
     </rect>
    </property>
