--- a/ui_creator/admin_window.ui
+++ b/ui_creator/admin_window.ui
@@ -139,46 +139,63 @@ color: white;
        <widget class="QWidget" name="">
         <property name="geometry">
          <rect>
-          <x>20</x>
-          <y>10</y>
-          <width>941</width>
-          <height>491</height>
+          <x>23</x>
+          <y>12</y>
+          <width>901</width>
+          <height>481</height>
          </rect>
         </property>
-        <layout class="QVBoxLayout" name="verticalLayout_5">
+        <layout class="QHBoxLayout" name="horizontalLayout_5">
          <item>
           <widget class="QTableView" name="table_view_stu_course"/>
          </item>
          <item>
-          <layout class="QHBoxLayout" name="horizontalLayout_5">
+          <layout class="QVBoxLayout" name="verticalLayout_5">
            <item>
-            <widget class="QPushButton" name="btn_add_course_for_stu">
+            <widget class="QPushButton" name="btn_del_course_for_stu">
+             <property name="toolTip">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;从当前所选课程中移除&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
              <property name="text">
-              <string>新增</string>
+              <string/>
+             </property>
+             <property name="icon">
+              <iconset resource="resources.qrc">
+               <normaloff>:/icons/assets/icons/arrow_right.png</normaloff>:/icons/assets/icons/arrow_right.png</iconset>
              </property>
             </widget>
            </item>
            <item>
-            <spacer name="horizontalSpacer">
+            <spacer name="verticalSpacer">
              <property name="orientation">
-              <enum>Qt::Orientation::Horizontal</enum>
+              <enum>Qt::Orientation::Vertical</enum>
              </property>
              <property name="sizeHint" stdset="0">
               <size>
-               <width>40</width>
-               <height>20</height>
+               <width>20</width>
+               <height>40</height>
               </size>
              </property>
             </spacer>
            </item>
            <item>
-            <widget class="QPushButton" name="btn_del_course_for_stu">
+            <widget class="QPushButton" name="btn_add_course_for_stu">
+             <property name="toolTip">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;添加所选课程&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
              <property name="text">
-              <string>删除</string>
+              <string/>
+             </property>
+             <property name="icon">
+              <iconset resource="resources.qrc">
+               <normaloff>:/icons/arrow_right</normaloff>:/icons/arrow_right</iconset>
              </property>
             </widget>
            </item>
           </layout>
+         </item>
+         <item>
+          <widget class="QTableView" name="table_view_stu_course_availabel"/>
          </item>
         </layout>
        </widget>
@@ -443,6 +460,8 @@ QPushButton:pressed {
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
