--- a/ui_creator/admin_window.ui
+++ b/ui_creator/admin_window.ui
@@ -234,7 +234,7 @@ color: white;
        </layout>
       </widget>
       <widget class="QWidget" name="page">
-       <widget class="QWidget" name="">
+       <widget class="QWidget" name="layoutWidget">
         <property name="geometry">
          <rect>
           <x>23</x>
@@ -310,7 +310,7 @@ color: white;
        </widget>
       </widget>
       <widget class="QWidget" name="page_4">
-       <widget class="QWidget" name="">
+       <widget class="QWidget" name="layoutWidget">
         <property name="geometry">
          <rect>
           <x>30</x>
